// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — text lead 1`] = `
<p
  className="text-lead"
>
  Foo
</p>
`;

exports[`snapshot — text lead with custom classes 1`] = `
<p
  className="text-lead text-blue-500"
>
  Foo
</p>
`;

exports[`snapshot — text regular (explicit) 1`] = `
<p
  className="text-regular"
>
  Foo
</p>
`;

exports[`snapshot — text regular (implicit) 1`] = `
<p
  className="text-regular"
>
  Foo
</p>
`;

exports[`snapshot — text small 1`] = `
<p
  className="text-small"
>
  Foo
</p>
`;
